# DecentHolograms-Wiki

./: .gitignore  LICENSE  README.md  SUMMARY.md  macros.py  mkdocs.yml  properdocs.yml  requirements.txt
.github/workflows/: publish_site.yml
advanced/: actions.md  animations.md  flags.md
api/: basic-usage.md  get-started.md
docs/: .nav.yml  CNAME  index.md  installation.md
docs/api/: basic-usage.md  dhapi.md  events.md  faq.md  get-started.md  index.md
docs/commands/: convert.md  index.md  list.md  permissions.md  reload.md  version.md
docs/configuration/: attribute-defaults.md  config.md  hologram.md  index.md  lang.md
docs/features/: actions.md  compatability.md  flags.md  index.md  line-content.md
docs/general/: actions.md  animations.md  compatibility.md  flags.md  index.md  setup.md
docs/guides/: first-hologram.md  index.md
general/: actions.md  animations.md  compatibility.md  flags.md  setup.md
general/commands/: README.md  hologram-line.md  hologram-pages.md  hologram.md
general/configuration/: animation.md  config.md  features.md
general/format/: README.md  colors.md
general/format-and-colors/: colors.md
get-started-1/: compatibility.md  setup.md
get-started-1/commands/: hologram-line.md  hologram-pages.md  hologram.md
get-started-1/configuration/: README.md  config.md
get-started-1/examples/: README.md
hooks/: replacer.py
hooks/CommandLexer/: pyproject.toml  setup.py
hooks/CommandLexer/commandlexer/: command_lexer.py
snippets/: arguments.md  format-options.md
theme/: index_list.html  main.html
(+127 files in other folders)
